--- a/.config/iterm2settings/com.googlecode.iterm2.plist
+++ b/.config/iterm2settings/com.googlecode.iterm2.plist
@@ -1862,6 +1862,8 @@
 			<string>/Users/lockyc</string>
 		</dict>
 	</array>
+	<key>OnlyWhenMoreTabs</key>
+	<false/>
 	<key>OpenArrangementAtStartup</key>
 	<false/>
 	<key>OpenNoWindowsAtStartup</key>
@@ -1899,6 +1901,8 @@
 			<string>kNextWindowPointerAction</string>
 		</dict>
 	</dict>
+	<key>PromptOnQuit</key>
+	<false/>
 	<key>SoundForEsc</key>
 	<false/>
 	<key>StatusBarPosition</key>
